# hpc_samples

./: .gitattributes  readme.md
mandelbrotSet/: CMakeLists.txt  helper.h  hybrid.cpp  mpi_dynamic.cpp  mpi_static.cpp  omp_dynamic.cpp
oddeven-sort/: hello  hello.cpp  main.cpp  mpisort  oddevensort.cpp  run.sh  sort
shortest-path/: CMakeLists.txt  floyd.cpp
